[fix] navbar is now fixed top, no overlapping of the body

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,6 +3,9 @@
 @import "point";
 @import "topic";
 
+body {
+  padding-top: 70px;
+}
 ul {
   padding: 0px;
 }
